--- a/.env
+++ b/.env
@@ -43,6 +43,9 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+WX_APP_ID=wx4a7bd4ae218e36a8
+WX_APP_SEC=84cab1213967cdaa32e1b54af6a8c72f
+
 WEIXIN_APPID_0=wxd5af665b240b75d4
 WEIXIN_MCH_ID=1500086022
 WEIXIN_MCH_KEY=7c4a8d09ca3762af61e59520943AB26Q
